# OutfitPickerCLI

./: .gitignore  Package.swift
.devcontainer/outfitpicker/: devcontainer.json
Sources/OutfitPickerCLI/: OutfitPickerCLI.swift
Sources/OutfitPickerCLI/Config/: Configuration.swift
Sources/OutfitPickerCLI/Menu/: AdvancedMenu.swift  CategoryMenu.swift  MainMenu.swift  MenuRenderer.swift  MenuSystem.swift  OutfitPresentation.swift
Sources/OutfitPickerCLI/Models/: MenuChoice.swift  OutfitSession.swift
Sources/OutfitPickerCLI/Services/: OutfitService.swift
Sources/OutfitPickerCLI/UI/: UI.swift
Sources/OutfitPickerCore/Application/: OutfitPicker.swift
Sources/OutfitPickerTestSupport/: FakeCacheManager.swift  FakeCategoryRepository.swift  FakeServices.swift  Locked.swift  TestDoubles.swift  TestFixtures.swift  ThrowingCategoryRepository.swift
Tests/OutfitPickerCLITests/: OutfitPickerCLITests.swift
outfitpicker-go/: .gitignore  Makefile  README.md
rust-rewrite/: Cargo.toml
rust-rewrite/src/: lib.rs  main.rs  test_support.rs
rust-rewrite/src/application/: mod.rs  picker.rs  session.rs
rust-rewrite/src/application/use_cases/: get_categories.rs  mod.rs  reset_category.rs  select_outfit.rs  tests.rs  wear_outfit.rs
rust-rewrite/src/domain/: error.rs  error_tests.rs  mod.rs  models.rs  models_tests.rs  ports.rs  validation.rs
rust-rewrite/src/infrastructure/: cache.rs  config.rs  mod.rs
rust-rewrite/src/infrastructure/fs/: mod.rs  scanner.rs  validation.rs
rust-rewrite/src/interface/tui/: app.rs  events.rs  mod.rs  render.rs  screens.rs
(+92 files in other folders)
