[package]
name = "outfit_picker"
version = "0.1.0"
edition = "2021"
authors = ["David Hughes"]
description = "A CLI tool for managing and rotating outfit selections"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# File system utilities
walkdir = "2.4"
directories = "5.0"

# Random selection
rand = "0.8"

# Async streams for concurrent scanning
futures = "0.3"

# Terminal UI
crossterm = "0.27"
ratatui = "0.25"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.9"
assert_fs = "1.1"
predicates = "3.1"

[[bin]]
name = "outfit-picker"
path = "src/main.rs"
